--- a/client/src/assets/css/global/_global.scss
+++ b/client/src/assets/css/global/_global.scss
@@ -58,6 +58,9 @@ img {
 
 input {
     border: 1px solid lightgray !important;
+    padding: 10px;
+
+    font-size: 16px;
 
     &:focus {
         outline: none;
