--- a/client/src/app/pages/homepage/homepage.scss
+++ b/client/src/app/pages/homepage/homepage.scss
@@ -9,7 +9,7 @@
     }
 
     &__img {
-        width: 300px;
+        width: 100%;
         justify-self: center;
     }
 
@@ -35,7 +35,7 @@
     }
 
     &__description {
-        padding: 0 1rem;
+        // padding: 0 1rem;
         margin-bottom: 2.5rem;
     }
 }
@@ -139,7 +139,7 @@
     }
 
     &__price {
-        font-size: var(--smaller-font-size);
+        // font-size: var(--smaller-font-size);
         font-weight: var(--font-medium);
         color: var(--black-color);
     }
@@ -230,12 +230,12 @@
 
     &__description {
         text-align: left;
-        margin-bottom: 2rem;
+        margin: 2rem 0;
     }
 
     &__steps {
-        row-gap: 2.5rem;
-        grid-template-columns: auto auto auto;
+        row-gap: 1.5rem;
+        grid-template-columns: auto auto auto auto;
     }
 
     &__block {
@@ -257,6 +257,7 @@
 
         p {
             text-align: left;
+            font-size: var(--small-font-size);
         }
     }
 }
@@ -278,29 +279,68 @@
     }
 
     &__avatar {
-        width: 123px;
-        height: 123px;
+        width: 80px !important;
+        height: 80px;
+        object-fit: contain;
     }
 
     &__block {
         display: flex;
         padding: 1.5rem;
 
+        position: relative;
+
         &:hover {
             box-shadow: 0 8px 20px hsla(19, 64%, 48%, 0.08);
+        }
+
+        .btn__delete {
+            position: absolute;
+            right: 0;
+            top: 0;
         }
     }
 
     &__detail {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
 
-        margin-left: 1.5rem;
+        width: 100%;
+
+        // margin-left: 1.5rem;
 
         h3 {
             text-align: justify;
             margin-bottom: 1rem;
+            font-size: 14px;
+
+            margin-top: 10px;
+        }
+
+        span {
+            color: var(--first-color);
+            font-size: 20px;
+        }
+    }
+
+    .btn__add {
+        background: var(--first-color);
+        padding: 15px;
+        border: none;
+        border-radius: 10px;
+
+        color: #ffffff;
+        cursor: pointer;
+
+        font-size: 16px;
+
+        display: flex;
+        align-items: center;
+        margin: 15px auto 25px;
+
+        svg {
+            margin-right: 5px;
         }
     }
 }
